--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "postcss": "^8.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.6.0",
     "react-scripts": "^5.0.1",
     "svgo": "^3.3.2"
   },
